@@ -4,6 +4,11 @@ CHANGELOG: Here I will record changes made in each release so that you may under
 as well as note new features/changes which may be important to you.
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+Beta v0.65:
+	-Added dynamic sizing of project containers so that the customer data is always readable
+	-General fixes and improvements
+
+///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 Beta v0.6:
 	-Added more robust error handling and fixed issue with filtering
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
